test/manifests/route-no-tls.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/cert-ctl-expires: Feb 26 15:21:51 2020
    openshift.io/cert-ctl-status: "new"
    openshift.io/host.generated: "true"
  creationTimestamp: null
  labels:
    app: dotnet-example
  name: dotnet-no-tls
spec:
  host: 
  to:
    kind: Service
    name: dotnet-example
    weight: 100
  wildcardPolicy: None
